[gd_scene load_steps=7 format=3 uid="uid://cdewl63aqvs7b"]

[ext_resource type="Script" uid="uid://475xqrfyyjia" path="res://file_dialog/load_file.gd" id="1_gmshg"]
[ext_resource type="Texture2D" uid="uid://b6mv23cq8bncx" path="res://assets/file_dialog/title-bar-x3.png" id="2_obumy"]
[ext_resource type="Texture2D" uid="uid://8si5r6fxbidm" path="res://assets/file_dialog/exit-button-x3.png" id="3_8l0wo"]
[ext_resource type="Texture2D" uid="uid://c8iudgnvx58hr" path="res://assets/file_dialog/window-x3.png" id="4_5t006"]
[ext_resource type="Texture2D" uid="uid://djdji6exs5hlj" path="res://assets/file_dialog/window-bar-x3.png" id="5_mo0iw"]
[ext_resource type="Texture2D" uid="uid://b5g6jpl6wfj3l" path="res://assets/file_dialog/confirm-button-x3.png" id="6_6i6ar"]

[node name="load_file" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 162.0
offset_bottom = 189.0
mouse_filter = 2
script = ExtResource("1_gmshg")

[node name="file_dialog" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="title_bar" type="TextureRect" parent="file_dialog"]
layout_mode = 2
texture = ExtResource("2_obumy")

[node name="exit" type="TextureButton" parent="file_dialog/title_bar"]
layout_mode = 0
offset_left = 141.0
offset_right = 162.0
offset_bottom = 21.0
texture_normal = ExtResource("3_8l0wo")
texture_pressed = ExtResource("3_8l0wo")
texture_hover = ExtResource("3_8l0wo")
texture_disabled = ExtResource("3_8l0wo")
texture_focused = ExtResource("3_8l0wo")

[node name="window" type="TextureRect" parent="file_dialog"]
layout_mode = 2
texture = ExtResource("4_5t006")

[node name="file_container" type="HFlowContainer" parent="file_dialog/window"]
layout_mode = 2
offset_left = 9.0
offset_top = 6.0
offset_right = 153.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
last_wrap_alignment = 1

[node name="bar" type="TextureRect" parent="file_dialog"]
layout_mode = 2
texture = ExtResource("5_mo0iw")

[node name="button_border" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = 168.0
offset_right = 154.0
offset_bottom = 183.0
texture = ExtResource("6_6i6ar")

[node name="load_button" type="Button" parent="button_border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 4
text = "confirm"
flat = true

[connection signal="pressed" from="file_dialog/title_bar/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="button_border/load_button" to="." method="_on_load_button_pressed"]
